flapivor/tests/m3/hopix/typechecker/good/23-polymorphic-record-02.hopix
type P <a, b> = { x : a; y : b }
val x : P <Int, String> = { x = 0; y = "River Song" }<Int, String>