flapivor/tests/m3/hopix/typechecker/bad/33-record-07.hopix
type T = { l : Int }

val r : T = { l = 0; x = 0 }<>